# cozy_player

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yml  docker-compose.yaml  pyrightconfig.json  run.sh
backend/: README.md  go.mod  go.sum  manage.py  pyproject.toml  run.sh
backend/artists/: filters.py  models.py  serializers.py  urls.py  views.py
backend/artists/migrations/: 0001_initial.py
backend/artists/tests/: test_get.py
backend/cmd/main/: main.go
backend/common/: filters.py  headers.py  utils.py
backend/config/: config.go
backend/cozy_player/: asgi.py  settings.py  urls.py  wsgi.py
backend/internal/container/: container.go
backend/internal/controller/: artist.go  library.go  queue.go  track.go
backend/internal/database/: database.go
backend/internal/middleware/: middleware.go
backend/internal/model/: artist.go  track.go
backend/internal/router/: router.go
backend/internal/service/: artist.go  library.go  queue.go  track.go
backend/pkg/cover/: cover.go
backend/pkg/ffmpeg/: ffmpeg.go
backend/pkg/response/: response.go
backend/pkg/structs/: stack.go  stack_test.go
backend/pkg/tags/: tags.go
backend/pkg/track/: track.go  track_test.go
backend/pkg/utils/: rand.go  slices.go  slices_test.go
backend/playlists/: filters.py  models.py  querysets.py  serializers.py  urls.py  views.py
backend/playlists/migrations/: 0001_initial.py
backend/playlists/tests/: test_get.py
backend/tracks/: filters.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/tracks/migrations/: 0001_initial.py
(+51 files in other folders)
